Overflow issues searchSet for cuisine tags scaffold

--- a/basic/app/globals.css
+++ b/basic/app/globals.css
@@ -84,3 +84,14 @@ p {
 .inline-text_copy--active {
     display: inline-block;
 }
+
+/* For Webkit-based browsers (Chrome, Safari and Opera) */
+.scrollbar-hide::-webkit-scrollbar {
+    display: none;
+}
+
+/* For IE, Edge and Firefox */
+.scrollbar-hide {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
